--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,8 +27,8 @@ jobs:
       - run: git config user.email github-actions@github.com
       - run: git pull
       - run: git checkout test
-      - run: git pull
-      - run: git rebase main
+#       - run: git pull
+      - run: git rebase origin/main
       - run: git push --force
 
 
