--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,6 +29,6 @@ jobs:
       - run: git checkout test
       - run: git pull
       - run: git merge main
-      - run: git push --force
+      - run: git push
 
 
