--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,9 +20,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: "update" 
-        uses: actions/checkout@v3
+      - run: git init
       - run: git config user.name github-actions
       - run: git config user.email github-actions@github.com
       - run: git pull
