--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,8 @@ jobs:
       - run: git init
       - run: git config user.name github-actions
       - run: git config user.email github-actions@github.com
+      - run: git remote add origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+      - run: git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
       - run: git pull
       - run: git remote -v
       - run: git remote update
