--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,5 +28,6 @@ jobs:
 #       - run: git pull
       - run: git remote -v
       - run: git remote update
+      - run: git status
       - run: git rebase --autosquash --autostash origin/main origin/test
       - run: git push --force origin test
