--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,9 +25,13 @@ jobs:
       - run: git config user.email github-actions@github.com
       - run: git remote add origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
       - run: git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
-      - run: git remote -v
-      - run: git remote update
       - run: git status
+      - run: git pull --all
+      - run: git fetch --all
+#       - run: git remote update
+      - run: git status
+      - run: git checkout test
+      - run: git rebase main test
 #       - run: git switch test
-      - run: git rebase --autosquash --autostash main test
+#       - run: git rebase --autosquash --autostash main test
       - run: git push --force origin test
