--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
 #       - run: git remote update
       - run: git status
       - run: git checkout test
-      - run: git rebase main test
+      - run: git rebase origin/main
 #       - run: git switch test
-#       - run: git rebase --autosquash --autostash origin/main
+#       - run: git rebase --autosquash --autostash main test
       - run: git push --force origin test
