--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,14 +25,21 @@ jobs:
       - run: git config user.email github-actions@github.com
       - run: git remote add origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
       - run: git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+  
+      - run: git fetch origin main
+      - run: git fetch origin test
       - run: git status
-      - run: git fetch --all
+      - run: git git checkout -b origin/test
+      - run: git rebase origin/main
+      - run: git push --force-with-lease fork origin/test:test
+
+#       - run: git fetch --all
 #       - run: git pull --all
 #       - run: git remote update
-      - run: git status
-      - run: git checkout test
-      - run: git fetch origin
-      - run: git rebase origin/main
+#       - run: git status
+#       - run: git checkout test
+#       - run: git fetch origin
+#       - run: git rebase origin/main
 #       - run: git switch test
 #       - run: git rebase --autosquash --autostash main test
-      - run: git push --force origin test
+#       - run: git push --force origin test
