--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
       - run: git fetch origin main
       - run: git fetch origin test
       - run: git status
-      - run: git git checkout -b origin/test
+      - run: git checkout -b origin/test
       - run: git rebase origin/main
       - run: git push --force-with-lease fork origin/test:test
 
