--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,8 +31,7 @@ jobs:
       - run: git status
       - run: git checkout -b origin/test
       - run: git status
-      - run: git fetch origin/main
-      - run: git rebase origin/main
+      - run: git rebase origin test
       - run: git push --force-with-lease fork origin/test:test
 
 #       - run: git fetch --all
