--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
       - run: git checkout -b main
 #       - run: git checkout -b origin/test
       - run: git status
-      - run: git rebase origin test
+      - run: git rebase origin/test
       - run: git push --force-with-lease fork origin/test:test
 
 #       - run: git fetch --all
