--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,8 +28,9 @@ jobs:
   
       - run: git fetch origin main
       - run: git fetch origin test
+      - run: git fetch --all
       - run: git status
-      - run: git checkout -b main
+      - run: git checkout -b test
 #       - run: git checkout -b origin/test
       - run: git status
       - run: git rebase origin/test
