--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,17 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  rebase_branches:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Rebase head_branch on base_ref
+          # Recommended: specify a version such as `@v1.0` rather than `@main`
+          uses: DeeDeeG/rebase-github-action@main
+          with:
+            # Head branch, which will be rebased onto the base_ref.
+            head_branch: test
+            # Branch, or Git ref, that the head_branch will be rebased onto.
+            base_ref: main
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
@@ -20,17 +31,20 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - run: git init
-      - run: git config user.name github-actions
-      - run: git config user.email github-actions@github.com
-      - run: git remote add origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
-      - run: git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+        - run: echo "here"
+#       - run: git init
+#       - run: git config user.name github-actions
+#       - run: git config user.email github-actions@github.com
+#       - run: git remote add origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+#       - run: git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
   
-      - run: git fetch --all
-      - run: git checkout main
-      - run: git pull
-      - run: git checkout test
-      - run: git rebase main
+#       - run: git fetch --all
+#       - run: git checkout main
+#       - run: git pull
+#       - run: git checkout test
+#       - run: git rebase main
+
+
 #       - run: git fetch origin main
 #       - run: git fetch origin test
 #       - run: git fetch --all
@@ -50,4 +64,4 @@ jobs:
 #       - run: git rebase origin/main
 #       - run: git switch test
 #       - run: git rebase --autosquash --autostash main test
-      - run: git push --force test
+#       - run: git push --force test
