--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,9 +21,9 @@ jobs:
           uses: DeeDeeG/rebase-github-action@main
           with:
             # Head branch, which will be rebased onto the base_ref.
-            head_branch: test
+            head_branch: origin/test
             # Branch, or Git ref, that the head_branch will be rebased onto.
-            base_ref: main
+            base_ref: origin/main
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
