--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,14 +29,14 @@ jobs:
 #       - run: git rebase main
 
 
-      - run: git fetch origin main
-      - run: git fetch origin test
-      - run: git fetch --all
+      - run: git pull main
+      - run: git pull test
+#       - run: git fetch --all
       - run: git status
       - run: git checkout -b test
       - run: git status
-      - run: git rebase origin/test
-      - run: git push --force-with-lease fork origin/test:test
+      - run: git rebase 
+      - run: git push --force-with-lease
 
 #       - run: git fetch --all
 #       - run: git pull --all
