--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "aa" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,8 +29,8 @@ jobs:
 #       - run: git rebase main
 
 
-      - run: git pull main
-      - run: git pull test
+      - run: git pull origin main
+      - run: git pull origin test
 #       - run: git fetch --all
       - run: git status
       - run: git checkout -b test
