--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,8 @@ jobs:
         uses: actions/checkout@v3
       - run: git config user.name github-actions
       - run: git config user.email github-actions@github.com
-      
+      - run: git remote add origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
+
       - run: git status  
       - run: git fetch --all
       - run: git status
