--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,9 +24,12 @@ jobs:
       - run: git status  
       - run: git fetch --all
       - run: git status
-      
+     
+      - run: git checkout main
       - run: git pull
       - run: git checkout bb
+      - run: ls
+      - run: tree
       - run: git pull
       - run: git status
       - run: git rebase main
