--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
 #       - name: "update" 
 #         uses: actions/checkout@v3
+      - run: git clone https://github.com/akunowski/test_test
+
       - run: git config user.name github-actions
       - run: git config user.email github-actions@github.com
       
