--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,14 @@ jobs:
 #         uses: actions/checkout@v3
       - run: git clone https://github.com/akunowski/test_test
       - run: ls
-      - run: cd test_test/
+      - run: pwd
+      - run: cd test_test
+      - run: ls
+      - run: pwd
+      - run: cd test_test
+      - run: ls
+      - run: pwd
+      - run: cd test_test
 #       - run: cd ./test_test
 
       - run: ls
